--- a/elections_france_model_selection.Rmd
+++ b/elections_france_model_selection.Rmd
@@ -120,7 +120,7 @@ grid_arrange_shared_legend <- function(..., nrow = 1, ncol = length(list(...)), 
 ```
 
 ### Generic function to plot
-```{r fig.width=8, fig.height=8}
+```{r fig.width=8, fig.height=6}
 plot_corr<-function(df,feature,ratio,pop_threshold,candidate,title){
   df<-  df[df[,feature]>0,] 
  df<-  df[df[,feature]<1,]  %>%filter(Population>pop_threshold) %>% filter(REG %in% c(53,93,22,31))
@@ -128,10 +128,17 @@ plot_corr<-function(df,feature,ratio,pop_threshold,candidate,title){
   x_data<-df[,feature] * ratio
   
   
-  ggplot(df,aes_string(x=x_data,y=candidate,col="NOM_REG",size="Population"))+ geom_jitter(alpha=.9)  +theme_economist(stata=TRUE) + scale_colour_economist()+theme(legend.title=element_blank())+ylab(paste0('1st Round - ',candidate,' (%)'))+ xlab('Worker rate in active population (%)')+theme(aspect.ratio=1/2,legend.direction='vertical',legend.position='bottom',legend.box='horizontal')+ggtitle(paste0('For cities with Population>',pop_threshold))+labs(caption = "©Clément Lefèvre 2017 (Sources : Ministère de l'Intérieur, INSEE)")+scale_colour_manual(values = c("#f04723", "#f48d04", "#00a1ce"))
+  p<-ggplot(df,aes_string(x=x_data,y=candidate,col="NOM_REG",size="Population"))+ geom_jitter(alpha=.7)  +theme_fivethirtyeight() +
+    theme(axis.title = element_text()) + scale_colour_economist()+ylab(paste0('1st Round - ',candidate,' (%)'))+ xlab('Worker rate in active population (%)')+theme(legend.direction='vertical',legend.position='top',legend.box='horizontal')+ggtitle(paste0('Cities with population>',pop_threshold))+labs(caption = "©Clément Lefèvre 2017 (Sources : Ministère de l'Intérieur, INSEE)")+scale_colour_manual(values = c("#f04723", "#f48d04", "#00a1ce"))+labs(size = "Population",color=' ')+ theme(legend.title=element_text(size=8))
+  return(p)
 }
 
-plot_corr(df,"Job_OUVRIER_ratio",100,1000,'LE.PEN','LE PEN TITLE')
+p0<-plot_corr(df,"Job_OUVRIER_ratio",100,1000,'LE.PEN',"")
+p1<-plot_corr(df,"Job_OUVRIER_ratio",100,1000,'MACRON','')
+p0
+p1
+#grid_arrange_shared_legend(p0,p1,nrow =2 , ncol = 1)
+
 
 
 
